# advent-of-code

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  aoc_tools.py  environment.yml  setup.cfg  solutions.py
2015/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2016/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  geom.py
2018/: Advent.ipynb  computer.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day16.py  day17.py  day18.py  day19.py  day2.py  day21.py  day22.py  day23.py  day24.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  input16-1.txt  input19-annotated.txt  input21-annotated.txt  input21.txt  input3.txt
2019/: Problems.ipynb  algs.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  geom.py  input1.txt  input12.txt  input20.txt  input22.txt  input23.txt  input3.txt  input5.txt  intcode.py
2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  (+2 more)
(+49 files in other folders)
