[metadata]
name = advent-of-code-solutions
description = My advent of code solutions
long_description = file: README.md
long_description_content_type = text/markdown
author = Ryan May
license = BSD 3-Clause
license_file = LICENSE
url = https://github.com/dopplershift/advent-of-code
platform = any
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
version = 21.12.13

[options]
py_modules = aoc_tools
python_requires = >=3.8

[options.entry_points]
adventofcode.user =
    dopplershift = aoc_tools:run_solution
